--- a/src/app/product-add/product-add.component.html
+++ b/src/app/product-add/product-add.component.html
@@ -5,6 +5,18 @@
     <input type="text" name="name" class="form-control"placeholder="Product Name" [(ngModel)]="product.name">
     <input type="text" name="price" class="form-control"placeholder="Price" [(ngModel)]="product.price">
      <input type="text" name="desc" class="form-control"placeholder="Desc" [(ngModel)]="product.desc">
+          <input type="text"      
+                  class="form-control"      
+                  value="{{product.status ? 'Còn Hàng' : 'Hết Hàng'}}"
+                  readonly
+              />
+
+              <input type="checkbox" 
+                name="status"
+                class="form-control"
+                [(ngModel)]="product.status"
+                checked
+              />
       <input type="text" name="img" class="form-control"placeholder="Src" [(ngModel)]="product.img">
   </div>
   <button type="submit" class="btn btn-primary" (click)="addProduct()">Submit</button>
