--- a/src/app/slider/slider.component.html
+++ b/src/app/slider/slider.component.html
@@ -6,13 +6,13 @@
     </ol>
     <div class="carousel-inner" role="listbox">
       <div class="carousel-item active">
-        <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="First slide">
+        <img class="d-block img-fluid" src="https://lh3.googleusercontent.com/proxy/io0_zeQebCyL1XUBTN6clVEC8pD0tc-uZdgz3xoW5v6al7_FRNfEmmIitjzhwN5deAj3AcX5HNyzmr7e0WsERzKVqW-Ca6Uy5Zg7n1y1Fy0JUMXT" alt="First slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="Second slide">
+        <img class="d-block img-fluid" src="https://lh3.googleusercontent.com/proxy/io0_zeQebCyL1XUBTN6clVEC8pD0tc-uZdgz3xoW5v6al7_FRNfEmmIitjzhwN5deAj3AcX5HNyzmr7e0WsERzKVqW-Ca6Uy5Zg7n1y1Fy0JUMXT" alt="Second slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="Third slide">
+        <img class="d-block img-fluid" src="https://lh3.googleusercontent.com/proxy/io0_zeQebCyL1XUBTN6clVEC8pD0tc-uZdgz3xoW5v6al7_FRNfEmmIitjzhwN5deAj3AcX5HNyzmr7e0WsERzKVqW-Ca6Uy5Zg7n1y1Fy0JUMXT" alt="Third slide">
       </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
