--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -11,4 +11,4 @@
     <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
     </div>
 </div> -->
-{{product.name}}
+{{product.desc}}
