--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,30 +1,30 @@
-<div class="row">
-  <!-- <app-product ngClass="col-lg-4 col-md-6 mb-4"></app-product>
-    <app-product ngClass="col-lg-4 col-md-6 mb-4"></app-product>
-    <app-product ngClass="col-lg-4 col-md-6 mb-4"></app-product> -->
-  <div ngClass="col-lg-4 col-md-6 mb-4" *ngFor="let product of products">
-    <div class="card h-100">
-      <a href="#"><img class="card-img-top" [src]="product.img" alt=""></a>
-      <div class="card-body">
-        <h4 class="card-title">
-          <a href="#">{{product.name}}</a>
-        </h4>
-        <h5>${{product.price}}</h5>
-        <p class="card-text">{{product.desc}}</p>
-        <h2  class="card-text">{{product.status ? 'In stock': 'Out stock'}}</h2>
-      </div>
-      <div class="card-footer">
-          <button class="btn btn-primary" (click)="removeItem(product.id)">Delete</button>
-          <button class="btn btn-primary" (click)="showDetail(product)">Detail</button>
-          
-          <!-- <input type="text" name="" id="" (keyup)="changeName($event)" class="form-control mt-3"> -->
-          <!-- <input type="text" name="" id="" [(ngModel)]="product.name" class="form-control mt-3"> -->
-      </div>
+<div class="example">
+        <div class="container">
+            <div class="row">
+              <h2>Table</h2>
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>Name</th>
+                            <th>Price</th>
+                            <th>Desc</th>
+                            <th>Status</th>
+                            <th>Img</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let product of products">
+                            <td>{{product.name}}</td>
+                            <td>{{product.price}}</td>
+                            <td>{{product.desc}}</td>
+                            <td>{{product.status}}</td>
+                            <td><a href="#"><img class="card-img-top" [src]="product.img" alt=""></a></td>
+                            <td><button class="btn btn-primary" (click)="removeItem(product.id)">Delete</button></td>
+                            <td><button class="btn btn-primary" routerLink="/product/{{product.id}}">Detail</button></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+         
     </div>
-  </div>
-
-</div>
-
-<div *ngIf="selected">
- <h3> <app-product [data]="selected"></app-product></h3>
-</div>
